Se establece el main

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Proyecto 1</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -19,9 +19,34 @@
                     <li> <a href="">Personaje</a></li>                
                 </ul>
             </nav>
-        </div>
-       
+        </div>       
     </header>
     
+    <main class="container">
+        <div class="boxex">
+            <figure class="mainImg"></figure>
+            <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
+        </div>
+        <div class="boxex">
+            <figure class="mainImg"></figure>
+            <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
+        </div>
+        <div class="boxex">
+            <figure class="mainImg"></figure>
+            <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
+        </div>
+        <div class="boxex">
+            <figure class="mainImg"></figure>
+            <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
+        </div>
+        <div class="boxex">
+            <figure class="mainImg"></figure>
+            <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
+        </div>
+        <div class="boxex">
+            <figure class="mainImg"></figure>
+            <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
+        </div>
+    </main>
 </body>
 </html>
