se cambian los bordes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header> 
         <div class="header-container">
             <div class="logo"> <img src="./18375.png" alt="Aqui va el logo" class="logoImg"> </div>
-            <h1 class="namePrincipal">.Nombre</h1>
+            <h1 class="namePrincipal">Monster Target</h1>
             <nav class="navigation">
                 <ul>
                     <li><a href="">Home</a></li>
