se agrega el fotter, iconos y mostruos

--- a/index.html
+++ b/index.html
@@ -39,31 +39,36 @@
             <h1 class="target">  Target</h1>
             <hr>
             <div class="boxex">
-                <figure class="mainImg"></figure>
+                <figure class="mainImg"><img src="./monster1.png" alt=""></figure>
                 <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
             </div>
             <div class="boxex">
-                <figure class="mainImg"></figure>
+                <figure class="mainImg"><img src="./monster2.png" alt=""></figure>
                 <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
             </div>
             <div class="boxex">
-                <figure class="mainImg"></figure>
+                <figure class="mainImg"><img src="./monster3.png" alt=""></figure>
                 <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
             </div>
             <div class="boxex">
-                <figure class="mainImg"></figure>
+                <figure class="mainImg"><img src="./monster4.png" alt=""></figure>
                 <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
             </div>
             <div class="boxex">
-                <figure class="mainImg"></figure>
+                <figure class="mainImg"><img src="./monster5.png" alt=""></figure>
                 <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
             </div>
             <div class="boxex">
-                <figure class="mainImg"></figure>
+                <figure class="mainImg"><img src="./monster6.png" alt=""></figure>
                 <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
             </div>
         </section>
         
     </main>
 </body>
+<footer>
+    <div class="twitter"><img src="./twitter.png" alt="" > </div>
+    <div class="imstagran"><img src="./instagram.png" alt=""></div>
+    <div class="facebook"> <img src="./facebook.png" alt=""></div>
+</footer>
 </html>
