se cambia logo de la cabecera

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header> 
         <div class="header-container">
-            <div class="logo"> <img src="./18375.png" alt="Aqui va el logo" class="logoImg"> </div>
+            <div class="logo"> <img src="./logo.png" alt="Aqui va el logo" class="logoImg"> </div>
             <h1 class="namePrincipal">Monster Target</h1>
             <nav class="navigation">
                 <ul>
