se juntan todas als branches, se agregan imagenes desd eun server, version 1 terminado

--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto 1</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./tablet.css" media="screen and (min-width: 530px)">
+    <link rel="stylesheet" href="./desktop.css" media="screen and (min-width: 800px)">
 </head>
 <body>
     <header> 
         <div class="header-container">
-            <div class="logo"> <img src="./logo.png" alt="Aqui va el logo" class="logoImg"> </div>
+            <div class="logo"> <img src="https://dl.dropboxusercontent.com//s/z65gchb2v6es8o3/logo.png?dl=0" alt="Aqui va el logo" class="logoImg"> </div>
             <h1 class="namePrincipal">Monster Target</h1>
             <nav class="navigation">
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="">Historia</a></li>
-                    <li> <a href="">Personaje</a></li>                
+                    <li><a href="">History</a></li>
+                    <li> <a href="">Target</a></li>                
                 </ul>
             </nav>
         </div>       
@@ -30,7 +32,7 @@
             <p>
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit accusamus optio, reiciendis aperiam nobis voluptates delectus, expedita soluta, explicabo odio id. Dicta, dolorem? Voluptate, laudantium esse ea aspernatur sit doloremque?
                Cumque, eveniet incidunt id repudiandae nisi ducimus nulla est vel debitis quia ad doloribus mollitia illum eos repellat modi vero aliquid consequuntur neque. Nostrum adipisci dolores molestiae atque laudantium voluptatibus?
-               Qui ullam, odit rem magni doloremque explicabo obcaecati est, ipsa ut, id autem non similique illo consectetur hic maiores deserunt asperiores? Ipsum aperiam soluta nihil, tempora impedit inventore obcaecati doloribus.
+               Qui ullam, odit rem magni doloremque explicabo obcaecati est, ipsa ut, id autem non similique illo consectetur hic maiores deserunt asperiores? Ipsum aperiam soluta nihil, tempora impedit inventore obcaecati doloribus.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique iure hic nulla error, dolor odio suscipit aperiam voluptate. Laborum facilis eos natus, alias quam ea tempora perferendis molestiae nemo aliquam!
             </p>
         </div>
         
@@ -38,28 +40,28 @@
             <hr>
             <h1 class="target">  Target</h1>
             <hr>
-            <div class="boxex">
-                <figure class="mainImg"><img src="./monster1.png" alt=""></figure>
+            <div class="boxex">            
+                <figure class="mainImg"><img src="https://i.imgur.com/r1Iu9CL.png" alt=""></figure>
                 <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
             </div>
             <div class="boxex">
-                <figure class="mainImg"><img src="./monster2.png" alt=""></figure>
+                <figure class="mainImg"><img src="https://i.imgur.com/cDyxEsJ.png" alt=""></figure>
                 <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
             </div>
             <div class="boxex">
-                <figure class="mainImg"><img src="./monster3.png" alt=""></figure>
+                <figure class="mainImg"><img src="https://i.imgur.com/Z4W9Nql.png" alt=""></figure>
                 <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
             </div>
             <div class="boxex">
-                <figure class="mainImg"><img src="./monster4.png" alt=""></figure>
+                <figure class="mainImg"><img src="https://i.imgur.com/GtyKYi6.png" alt=""></figure>
                 <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
             </div>
             <div class="boxex">
-                <figure class="mainImg"><img src="./monster5.png" alt=""></figure>
+                <figure class="mainImg"><img src="https://i.imgur.com/8SlR2uv.png" alt=""></figure>
                 <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
             </div>
             <div class="boxex">
-                <figure class="mainImg"><img src="./monster6.png" alt=""></figure>
+                <figure class="mainImg"><img src="https://i.imgur.com/kJNkbtx.png" alt=""></figure>
                 <p class="txtTarget">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias suscipit assumenda eligendi, vel, ipsum, et quas iure rerum nihil libero blanditiis aliquam illo adipisci. Maiores architecto tenetur ad odio sapiente.</p>
             </div>
         </section>
@@ -67,8 +69,9 @@
     </main>
 </body>
 <footer>
-    <div class="twitter"><img src="./twitter.png" alt="" > </div>
-    <div class="imstagran"><img src="./instagram.png" alt=""></div>
-    <div class="facebook"> <img src="./facebook.png" alt=""></div>
+    <div class="twitter"><img src="https://i.imgur.com/xK7phjo.png" alt="" > </div>
+    <div class="instagram"><img src="https://i.imgur.com/FrvjwId.png" alt=""></div>
+    <div class="facebook"> <img src="https://i.imgur.com/FjTw6s4.png" alt=""></div>
 </footer>
 </html>
+
